forUbuntuServerKubeAdm/yaml/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node
  labels:
    app: node
spec:
  containers:
  - name: node
    image: baghdasaryanparis/node:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 3000
---
apiVersion: v1
kind: Pod
metadata:
  name: py
  labels:
    app: py
spec:
  containers:
  - name: py
    image: baghdasaryanparis/py:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 5000
