forUbuntuServerKubeAdm/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeservice
spec:
  selector:
    app: node
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: pyservice
spec:
  selector:
    app: py
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
