forUbuntuServerKubeAdm/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: node.paris.devtools.digital
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeservice
            port: 
              number: 80
  - host: py.paris.devtools.digital
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pyservice
            port: 
              number: 80
